--- a/render.yaml
+++ b/render.yaml
@@ -15,6 +15,12 @@ services:
         sync: false
       - key: NEXTAUTH_SECRET
         sync: false
+      - key: NEXT_PUBLIC_BASE_URL
+        sync: false
+      - key: MONGODB_URI
+        sync: false
+      - key: MONGODB_MEDIA_URI
+        sync: false
       - key: ADMIN_EMAIL
         sync: false
       - key: ADMIN_PASSWORD
