--- a/package.json
+++ b/package.json
@@ -19,31 +19,32 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@heroicons/react": "^2.2.0",
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "6.15.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
-    "mongoose": "^8.18.0",
-    "next": "15.5.0",
+    "mongoose": "8.18.1",
+    "next": "15.5.2",
     "next-auth": "^4.24.11",
-    "nodemailer": "^6.10.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "sharp": "0.33.3",
+    "nodemailer": "7.0.6",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "sharp": "0.34.3",
     "swr": "^2.3.6",
-    "zod": "^4.0.17"
+    "zod": "4.1.5",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/node": "^20",
+    "@types/node": "20.19.13",
     "@types/nodemailer": "^7.0.1",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9",
     "eslint": "^9",
-    "eslint-config-next": "15.5.0",
-    "prisma": "^6.14.0",
-    "tailwindcss": "^4",
+    "eslint-config-next": "15.5.2",
+    "prisma": "6.15.0",
+    "tailwindcss": "~4.1.13",
     "typescript": "^5"
   }
 }
